✳️ Fix inaccuracies in CLAUDE.md
- Correct Java version from 25 to 26
- Fix architecture tree to reflect actual package structure
- Rename `PaymentProcessed` event to `PaymentCreated`
- Add missing use cases, endpoints, and domain events
- Remove non-existent preview features configuration